--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
           <li><a href="credits.php">Credits</a></li>
           <li><a href="privacy.php">Privacy Policy</a></li>
           <li><a href="contact.php">Contact</a></li>
-          <li><a href="http://goo.gl/QKZYu" target="_blank">Report a Bug</a></li>
+          <li><a href="https://github.com/vickyg3/social-photos/issues/new" target="_blank">Report a Bug</a></li>
           <li><a href="donate.php">Donate</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Share <b class="caret"></b></a>
